# stockclaude

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  LICENSE  Procfile  README.md  docker-compose.yml  nixpacks.toml  pyproject.toml  railway.json
.claude/commands/: CLAUDE.md  base-economy.md  base-industry.md  base-stock.md  stock-research.md  stock-weekly-strategy.md
claude-skill/commands/: base-economy.md  base-industry.md  base-stock.md  stock-daily.md  stock-discover.md  stock-research.md  stock-weekly-review.md
db/: CLAUDE.md  schema.sql  seed.example.sql
docs/measurement/: 2026-05-03-analyze-position-tokens.md  2026-05-03-raw.json  measure_analyze_position.py  (+1 more)
scripts/: 03_alter_stock_base_fundamentals.sql  05_alter_to_numeric.sql  07_score_weights_and_extras.sql  08_portfolio_snapshots_structured.sql  09_weekly_reviews.sql  10_cash_balance_trigger.sql  11_trades_rule_category.sql  12_rule_category_add_earnings.sql  13_alter_base_phase_momentum.sql  14_alter_industries_baseline.sql  15_alter_daily_review_quant_and_patterns.sql  16_create_weekly_strategy.sql  17_create_weekly_review_per_stock.sql  18_alter_weekly_reviews_phase_logs.sql  19_alter_weekly_review_indexes.sql  20_create_rule_catalog.sql  21_migrate_existing_rule_data.sql  CLAUDE.md  README.md  build-skills.sh  db_dump.sh  db_restore.sh  install-claude-skill.sh  measure_websearch.py  run_migrations.sh
server/: CLAUDE.md  config.py  db.py  main.py
tests/: CLAUDE.md  conftest.py  test_measure_websearch.py
web/: CLAUDE.md  package-lock.json  package.json  tailwind.config.ts
web/src/: App.tsx  (+2 more)
(+262 files in other folders)
